reimport some files

--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -1,7 +1,4 @@
-.header {
-  background-color: $purple;
-
-  &__contact {
-    background-color: $purpleDark;
-  }
+.top-bar {
+  background-color: red;
+  height: 70px;
 }
