--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -1,4 +1,11 @@
 .top-bar {
-  background-color: red;
-  height: 70px;
+
+  .brand {
+    background-color: green;
+  }
+  
+  .second-column {
+    background-color: yellow;
+  }
+  
 }
