--- a/source/stylesheets/layout/_navigation.scss
+++ b/source/stylesheets/layout/_navigation.scss
@@ -5,8 +5,36 @@
     font-size: 18px;
     font-weight: 500;
   }
-  ul li {
+  li {
     display: inline;
     margin: 0 5px 0 0;
+    &:last-child {
+      margin: 0;
+    }
+  }
+}
+
+.footer-menu, .footer-widgets {
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+  }
+  li {
+    display: inline;
+    margin: 0 10px 0 0;
+    &.current-menu-item {
+      a {
+        color: #ff9292;
+      }
+    }
+    &:last-child {
+      margin: 0;
+    }
+  }
+  a {
+    color: #939393;
+    text-decoration: none;
   }
 }
