update style structure

--- a/source/stylesheets/components/_search-form.scss
+++ b/source/stylesheets/components/_search-form.scss
@@ -1,6 +1,6 @@
 .search-form {
   button {
-    background-image: url('../icons/search.svg');
+    background-image: url('../assets/icons/search.svg');
     width: 23px;
     height: 23px;
     background-repeat: no-repeat;
