--- a/source/stylesheets/components/_cart.scss
+++ b/source/stylesheets/components/_cart.scss
@@ -1,7 +1,7 @@
 .cart {
 
   &__icon {
-    background-image: url('../icons/cart.svg');
+    background-image: url('../assets/icons/cart.svg');
     background-repeat: no-repeat;
     width: 24px;
     height: 24px;
