--- a/source/stylesheets/layout/_navigation.scss
+++ b/source/stylesheets/layout/_navigation.scss
@@ -19,7 +19,7 @@
     display: block;
   }
   .navbar-toggler-icon {
-    background-image: url('../icons/hamburger-menu.svg');
+    background-image: url('../assets/icons/hamburger-menu.svg');
   }
 }
 
