--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -1,4 +1,6 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/slick-carousel/slick/slick.scss";
+@import "../../node_modules/slick-carousel/slick/slick-theme.scss";
 
 @import 'abstracts/module';
 @import 'base/module';
