style the header nav

--- a/source/stylesheets/abstracts/_functions.scss
+++ b/source/stylesheets/abstracts/_functions.scss
@@ -1,2 +1,8 @@
 $purpleLight: lighten( $purple, 10% );
 $purpleDark: darken( $purple, 10% );
+
+.hiddeOnlySmall {
+  @include untilSmall {
+    display: none !important;
+  }
+}
