--- a/source/stylesheets/components/_cart.scss
+++ b/source/stylesheets/components/_cart.scss
@@ -1,20 +1,27 @@
 .cart {
+  position: relative;
 
   &__icon {
+    display: block;
+    width: 45px;
+    height: 40px;
     background-image: url('../assets/icons/cart.svg');
+    background-size: 20px;
+    background-position: center left;
     background-repeat: no-repeat;
-    width: 24px;
-    height: 24px;
-    display: inline-block;
-    vertical-align: bottom;
   }
+
   &__quantity {
-    background-color: #ca2424;
-    color: #fff;
+    display: block;
     width: 20px;
     height: 20px;
+    background-color: #ca2424;
     border-radius: 50%;
-    display: inline-block;
     text-align: center;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
   }
 }
