--- a/source/stylesheets/components/_search-form.scss
+++ b/source/stylesheets/components/_search-form.scss
@@ -1,19 +1,46 @@
 .search-form {
-  button {
-    background-image: url('../assets/icons/search.svg');
-    width: 23px;
-    height: 23px;
-    background-repeat: no-repeat;
-    background-color: transparent;
-    border: none;
+
+  &__container {
+    display: none;
+    width: 100%;
   }
 
+  display: flex;
+  border: 1px solid #999;
+  border-radius: 20px;
+  background-color: #fff;
+
   input[type="search"] {
-    background-color: #fff;
+    width: 100%;
+    padding: .5em .8em;
+    background-color: transparent;
     border: none;
+    outline: none;
     font-weight: 500;
-    font-size: 110%;
-    padding: .3rem 1rem;
-    margin-right: 0.3rem;
+    font-size: 1rem;
   }
+
+  button {
+    width: 40px;
+    height: 40px;
+    margin: 0 .3em;
+    background-color: transparent;
+    background-image: url('../assets/icons/search.svg');
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center center;
+    border: none;
+    outline: none;
+  }
+
+  /* clears the 'X' from Internet Explorer */
+  input[type=search]::-ms-clear {  display: none; width : 0; height: 0; }
+  input[type=search]::-ms-reveal {  display: none; width : 0; height: 0; }
+
+  /* clears the 'X' from Chrome */
+  input[type="search"]::-webkit-search-decoration,
+  input[type="search"]::-webkit-search-cancel-button,
+  input[type="search"]::-webkit-search-results-button,
+  input[type="search"]::-webkit-search-results-decoration { display: none; }
+
 }
