--- a/source/stylesheets/layout/_navigation.scss
+++ b/source/stylesheets/layout/_navigation.scss
@@ -1,49 +1,75 @@
-.main-menu {
-  padding: 0;
-  
+.category__menu {
   ul {
     margin: 0;
     padding: 0;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 0.8rem;
+    list-style-type: none;
+
+    display: flex;
+    justify-content: space-between;
   }
-  li {
-    display: inline;
-    margin: 0 5px 0 0;
-    &:last-child {
-      margin: 0;
+
+  a {
+    display: block;
+    padding: 12px 8px;
+    color: #000;
+    text-decoration: none;
+  }
+
+  @include untilMedium {
+    width: 100vw;
+    height: 100vh;
+    padding: 24px 0;
+    background-color: #fff;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
+    position: absolute;
+    left: 0;
+    z-index: 9999;
+    transform: translateX(-100%);
+    transition: .3s;
+    
+    ul {
+      display: block;
+    }
+    li {
+      margin-bottom: .75em;
+    }
+    a {
+      padding-left: 3em;
     }
   }
-  .dropdown:hover > .dropdown-menu,
-  .dropup:hover > .dropdown-menu {
-    display: block;
-  }
-  .navbar-toggler-icon {
-    background-image: url('../assets/icons/hamburger-menu.svg');
+
+  &--active {
+    transform: translateX(0);
+    overflow: hidden;
   }
 }
 
-.footer-menu, .footer-widgets {
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-size: 16px;
+.button__burger {
+  cursor: pointer;
+  div {
+    width: 25px;
+    height: 3px;
+    background-color: #000;
+    margin: 5px;
   }
-  li {
-    display: inline;
-    margin: 0 10px 0 0;
-    &.current-menu-item {
-      a {
-        color: #ff9292;
-      }
-    }
-    &:last-child {
-      margin: 0;
-    }
+  @include atMedium {
+    display: none;
   }
-  a {
-    color: #939393;
-    text-decoration: none;
+
+  & > div {
+    transition: .2s;
+  }
+  
+  &--toggle {
+    & .line1 {
+      transform: rotate(-45deg) translate(-5px, 6px);
+    }
+    & .line2 {
+      opacity: 0;
+    }
+    & .line3 {
+      transform: rotate(45deg) translate(-5px, -6px);
+    }
   }
 }
