--- a/source/stylesheets/components/_cart.scss
+++ b/source/stylesheets/components/_cart.scss
@@ -15,7 +15,7 @@
     display: block;
     width: 20px;
     height: 20px;
-    background-color: #ca2424;
+    background-color: $red700;
     border-radius: 50%;
     text-align: center;
     color: #fff;
