--- a/source/stylesheets/layout/_navigation.scss
+++ b/source/stylesheets/layout/_navigation.scss
@@ -1,10 +1,11 @@
 .category__menu {
+  background-color: #fff;
+
   ul {
     margin: 0;
     padding: 0;
     font-size: 0.8rem;
     list-style-type: none;
-
     display: flex;
     justify-content: space-between;
   }
@@ -13,6 +14,7 @@
     display: block;
     padding: 12px 8px;
     color: #000;
+    font-weight: 600;
     text-decoration: none;
   }
 
@@ -20,7 +22,6 @@
     width: 100vw;
     height: 100vh;
     padding: 24px 0;
-    background-color: #fff;
     box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
     position: absolute;
     left: 0;
@@ -42,34 +43,5 @@
   &--active {
     transform: translateX(0);
     overflow: hidden;
-  }
-}
-
-.button__burger {
-  cursor: pointer;
-  div {
-    width: 25px;
-    height: 3px;
-    background-color: #000;
-    margin: 5px;
-  }
-  @include atMedium {
-    display: none;
-  }
-
-  & > div {
-    transition: .2s;
-  }
-  
-  &--toggle {
-    & .line1 {
-      transform: rotate(-45deg) translate(-5px, 6px);
-    }
-    & .line2 {
-      opacity: 0;
-    }
-    & .line3 {
-      transform: rotate(45deg) translate(-5px, -6px);
-    }
   }
 }
