--- a/source/stylesheets/components/_cart.scss
+++ b/source/stylesheets/components/_cart.scss
@@ -3,7 +3,7 @@
 
   &__icon {
     display: block;
-    width: 45px;
+    width: 50px;
     height: 40px;
     background-image: url('../assets/icons/cart.svg');
     background-size: 20px;
@@ -13,10 +13,12 @@
 
   &__quantity {
     display: block;
-    width: 20px;
-    height: 20px;
-    background-color: $red700;
+    width: 24px;
+    height: 24px;
+    // background-color: $red700;
+    border: 1px solid #fff;
     border-radius: 50%;
+    font-weight: 600;
     text-align: center;
     color: #fff;
     position: absolute;
