--- a/source/stylesheets/components/_input.scss
+++ b/source/stylesheets/components/_input.scss
@@ -1,10 +1,13 @@
-.input-text {
-  font-size: 1rem;
+#input-base {
+  display: block;
+  box-sizing: border-box;
+
   padding: .5em;
-  border: 1px solid gray;
+  border: 1px solid $input-color;
   border-radius: 4px;
-  min-height: 40px;
   outline: none;
+
+  font-size: 1rem;
 
   &:focus {
     border: 2px solid $purple400 !important;
@@ -12,6 +15,29 @@
   }
 }
 
+.input-text, .qty-text, .comment-form input {
+  @extend #input-base;
+  min-height: 40px;
+  max-height: 40px;
+}
+
+textarea {
+  @extend #input-base;
+  height: 120px;
+}
+
 .woocommerce form .form-row {
   display: block;
+}
+
+.woocommerce-product-attributes-item .woocommerce-product-attributes-item--weight {
+  background-color: red;
+}
+
+.woocommerce-Tabs-panel .woocommerce-Tabs-panel--additional_information .panel .entry-content .wc-tab {
+  background-color: red;
+}
+
+.woocommerce-product-attributes .shop_attributes {
+  background-color: red;
 }
