rename page sass files

--- a/source/stylesheets/pages/_module.scss
+++ b/source/stylesheets/pages/_module.scss
@@ -1,8 +1,7 @@
-@import 'home';
-@import 'contact';
-@import 'store';
-@import 'simple-product';
-@import 'cart';
-@import 'checkout';
-@import 'payment';
-@import 'product';
+@import 'home-page';
+@import 'contact-page';
+@import 'simple-product-page';
+@import 'cart-page';
+@import 'checkout-page';
+@import 'payment-page';
+@import 'product-page';
