implement icons in the navigation and icons sprite generator in the project

--- a/source/stylesheets/abstracts/_mixins.scss
+++ b/source/stylesheets/abstracts/_mixins.scss
@@ -9,7 +9,7 @@ $large: 1200px;
 }
 
 @mixin atMedium {
-  @media (min-width: #{$medium}) {
+  @media (min-width: #{$medium + 1}) {
     @content;
   }
 }
