--- a/source/stylesheets/layout/_navigation.scss
+++ b/source/stylesheets/layout/_navigation.scss
@@ -1,31 +1,20 @@
+$bounce-animation: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
 .category__menu {
   background-color: #fff;
 
-  ul {
-    margin: 0;
-    padding: 0;
-    font-size: 0.8rem;
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  a {
-    display: block;
-    padding: 12px 8px;
-    color: #000;
-    font-weight: 600;
-    text-decoration: none;
-  }
-
+  // mobile styles
   @include untilMedium {
     width: 100vw;
     height: 100vh;
     padding: 24px 0;
+
     box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
+
     position: absolute;
     left: 0;
     transform: translateX(-100%);
+
     transition: .3s;
     
     ul {
@@ -39,8 +28,72 @@
     }
   }
 
+  // slide the menu on mobile
   &--active {
     transform: translateX(0);
     overflow: hidden;
   }
+
+  ul {
+    margin: 0;
+    padding: 0;
+    font-size: 0.8rem;
+    list-style-type: none;
+
+    @include atMedium {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
+  li {
+    display: flex;
+    flex: 1 1 100px;
+    text-align: center;
+  }
+  
+  a {
+    display: block;
+    width: 100%;
+    padding: 12px 0;
+
+    color: $black;
+    font-weight: 600;
+    text-decoration: none;
+
+    position: relative;
+    overflow: hidden;
+    transition: padding .2s $bounce-animation;
+    
+    span.icon-nav {
+      transition: top .2s $bounce-animation;
+      
+      position: absolute;
+      top: 0;
+      left: 50%;
+
+      transform: translateX(-50%) scale(.8);
+
+      @include atMedium {
+        top: -50px;
+      }
+    }
+  }
+
+  // expand on desktop to show the icons
+  @include atMedium {
+    &:hover {
+      a {
+        padding-top: 60px;
+      }
+      span.icon-nav {
+        top: 10px;
+      }
+    }
+    a:hover {
+      background-color: lighten( $purple500, 50% );
+    }
+  }
+
+  
 }
