style login page

--- a/source/stylesheets/components/_buttons.scss
+++ b/source/stylesheets/components/_buttons.scss
@@ -34,9 +34,9 @@
 }
 
 
-// button cuppon
+// secondary button
 .woocommerce button.button {
-  @include button-base(#fff, #f5f5f5, $blue300, $blue300, 2px solid $blue300);
+  @include button-base(#fff, #f5f5f5, $purple300, $purple300, 2px solid $purple300);
   line-height: 1.1;
 }
 
@@ -56,26 +56,6 @@
 // button finish checkout
 .woocommerce button.button.alt {
   @include button-base($green500, $green600, #fff, #fff, none);
-}
-
-// payment page
-.woocommerce-order-pay {
-
-  // button "pagar com mercado pago"
-  .woocommerce a.button.alt {
-    min-height: 40px;
-    max-height: 40px;
-    line-height: 1;
-    width: auto;
-    line-height: 1.4;
-  }
-  
-  // button "cancelar e limpar carrinho" 
-  .woocommerce .button.cancel {
-    @include button-base(#fff, #f5f5f5, $blue300, $blue300, 2px solid $blue300);
-    width: auto;
-    line-height: 1.1;
-  }
 }
 
 // button burger
