--- a/source/stylesheets/components/_input.scss
+++ b/source/stylesheets/components/_input.scss
@@ -28,16 +28,22 @@ textarea {
 
 .woocommerce form .form-row {
   display: block;
+
+  label {
+    margin: 0;
+    line-height: 1;
+    margin-bottom: 8px;
+  }
 }
 
-.woocommerce-product-attributes-item .woocommerce-product-attributes-item--weight {
-  background-color: red;
-}
+// .woocommerce-product-attributes-item .woocommerce-product-attributes-item--weight {
+//   background-color: red;
+// }
 
-.woocommerce-Tabs-panel .woocommerce-Tabs-panel--additional_information .panel .entry-content .wc-tab {
-  background-color: red;
-}
+// .woocommerce-Tabs-panel .woocommerce-Tabs-panel--additional_information .panel .entry-content .wc-tab {
+//   background-color: red;
+// }
 
-.woocommerce-product-attributes .shop_attributes {
-  background-color: red;
-}
+// .woocommerce-product-attributes .shop_attributes {
+//   background-color: red;
+// }
