--- a/source/stylesheets/components/_module.scss
+++ b/source/stylesheets/components/_module.scss
@@ -4,8 +4,8 @@
 @import 'dropdown';
 @import 'input';
 @import 'search-form';
-@import 'cart';
 @import 'star-rating';
 @import 'table';
 @import 'nav';
 @import 'side-cart';
+@import 'category-menu';
