--- a/source/stylesheets/components/_search-form.scss
+++ b/source/stylesheets/components/_search-form.scss
@@ -1,40 +1,30 @@
-.search-form {
-
-  display: flex;
-  border-radius: 20px;
-  background-color: #fff;
-
-  input[type="search"] {
-    width: 100%;
-    padding: .5em 0 .5em .8em;
-    background-color: transparent;
+div.dgwt-wcas-search-wrapp {
+  .dgwt-wcas-sf-wrapp input[type=search].dgwt-wcas-search-input {
+    border-radius: 20px;
     border: none;
-    outline: none;
-    font-weight: 500;
-    font-size: 1rem;
+    padding: 10px 50px 10px 15px;
   }
 
-  button {
-    width: 40px;
+  .dgwt-wcas-search-submit {
+    min-width: 40px;
     height: 40px;
-    margin: 0 .3em;
+    padding: 0;
+    margin-right: 12px;
     background-color: transparent;
-    background-image: url('../assets/icons/search.svg');
-    background-repeat: no-repeat;
-    background-size: 20px;
+    background-image: url("../assets/icons/search.svg");
     background-position: center center;
-    border: none;
-    outline: none;
+    background-repeat: no-repeat;
+    background-size: 24px;
+
+    &:hover, &:focus {
+      opacity: 1;
+    }
+
+    svg {
+      display: none;
+    }
+    &::before {
+      content: none;
+    }
   }
-
-  /* clears the 'X' from Internet Explorer */
-  input[type=search]::-ms-clear {  display: none; width : 0; height: 0; }
-  input[type=search]::-ms-reveal {  display: none; width : 0; height: 0; }
-
-  /* clears the 'X' from Chrome */
-  input[type="search"]::-webkit-search-decoration,
-  input[type="search"]::-webkit-search-cancel-button,
-  input[type="search"]::-webkit-search-results-button,
-  input[type="search"]::-webkit-search-results-decoration { display: none; }
-
 }
