--- a/source/stylesheets/components/_input.scss
+++ b/source/stylesheets/components/_input.scss
@@ -3,7 +3,7 @@
   box-sizing: border-box;
 
   padding: .5em;
-  border: 1px solid $input-color;
+  border: 1px solid $grey;
   border-radius: 4px;
   outline: none;
 
