--- a/source/stylesheets/components/_search-form.scss
+++ b/source/stylesheets/components/_search-form.scss
@@ -1,10 +1,15 @@
+// search container
 div.dgwt-wcas-search-wrapp {
+
+  // input
   .dgwt-wcas-sf-wrapp input[type=search].dgwt-wcas-search-input {
+    font-size: 16px;
     border-radius: 20px;
     border: none;
     padding: 10px 50px 10px 15px;
   }
 
+  // search button
   .dgwt-wcas-search-submit {
     min-width: 40px;
     height: 40px;
@@ -26,5 +31,72 @@ div.dgwt-wcas-search-wrapp {
     &::before {
       content: none;
     }
+  }
+}
+
+// suggestions container
+div.dgwt-wcas-suggestions-wrapp {
+  padding: 16px 0;
+  border: none;
+  border-top: 1px solid $grey;
+  border-radius: 0 0 20px 20px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, .1);
+  overflow: visible;
+
+  // item
+  .dgwt-wcas-suggestion.dgwt-wcas-suggestion-product {
+    padding: 8px 16px
+  }
+
+  // title
+  .dgwt-wcas-st {
+    .dgwt-wcas-st-title {
+      strong {
+        font-weight: 400;
+        text-decoration: none;
+      }
+    }
+  }
+
+  // button see more
+  .dgwt-wcas-suggestion.dgwt-wcas-suggestion-more {
+    padding: 12px 8px;
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: none;
+    justify-content: flex-start;
+    color: $purple400;
+  }
+
+  // no results
+  .dgwt-wcas-suggestion.dgwt-wcas-suggestion-nores {
+    padding: 12px 8px;
+    opacity: 1;
+    .dgwt-wcas-st {
+      padding: 0 12px;
+      font-size: 16px;
+      text-transform: none;
+    }
+  }
+
+  // details
+  &::before, &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: -22px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 22px 0 0 22px;
+    border-color: transparent transparent transparent #fff;
+    z-index: 1;
+  }
+  &::after {
+    left: unset;
+    right: 0;
+    border-width: 0 0 22px 22px;
+    border-color: transparent transparent #fff transparent;
   }
 }
