--- a/source/stylesheets/components/_simple-product.scss
+++ b/source/stylesheets/components/_simple-product.scss
@@ -1,5 +1,3 @@
-
-
 // product card
 .woocommerce ul.products li.product, .woocommerce-page ul.products li.product {
   padding: 12px;
@@ -25,10 +23,10 @@
   }
 }
 
-
 // product card title
 .woocommerce ul.products li.product .woocommerce-loop-category__title,
-.woocommerce ul.products li.product .woocommerce-loop-product__title, .woocommerce ul.products li.product h3 {
+.woocommerce ul.products li.product .woocommerce-loop-product__title,
+.woocommerce ul.products li.product h3 {
   color: $black;
   font-weight: 600;
   // font-size: 1.2rem;
@@ -77,8 +75,6 @@
   font-size: 1.5rem;
 }
 
-
-
 // product offert
 .woocommerce ul.products li.product .onsale {
   position: absolute;
@@ -99,6 +95,6 @@
   }
 }
 
-.product_meta > span{
+.product_meta > span {
   display: block;
 }
