--- a/source/stylesheets/components/_search-form.scss
+++ b/source/stylesheets/components/_search-form.scss
@@ -1,25 +1,39 @@
+$search-form-height-small: 32px;
+$search-form-height-large: 40px;
+
 // search container
 div.dgwt-wcas-search-wrapp {
 
   // input
   .dgwt-wcas-sf-wrapp input[type=search].dgwt-wcas-search-input {
+    height: $search-form-height-small;
     font-size: 16px;
     border-radius: 20px;
     border: none;
     padding: 10px 50px 10px 15px;
+
+    @include atMedium {
+      height: $search-form-height-large;
+    }
   }
 
   // search button
   .dgwt-wcas-search-submit {
-    min-width: 40px;
-    height: 40px;
+    min-width: $search-form-height-small;
+    height: $search-form-height-small;
     padding: 0;
     margin-right: 12px;
     background-color: transparent;
     background-image: url("../assets/icons/search.svg");
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: 24px;
+    background-size: 20px;
+
+    @include atMedium {
+      min-width: $search-form-height-large;
+      height: $search-form-height-large;
+      background-size: 24px;
+    }
 
     &:hover, &:focus {
       opacity: 1;
@@ -84,19 +98,26 @@ div.dgwt-wcas-suggestions-wrapp {
     content: '';
     display: block;
     position: absolute;
-    top: -22px;
+    top: -16px;
     left: 0;
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 22px 0 0 22px;
+    border-width: 16px 0 0 16px;
     border-color: transparent transparent transparent #fff;
     z-index: 1;
+    @include atMedium {
+      top: -20px;
+      border-width: 20px 0 0 20px;
+    }
   }
   &::after {
     left: unset;
     right: 0;
-    border-width: 0 0 22px 22px;
+    border-width: 0 0 16px 16px;
     border-color: transparent transparent #fff transparent;
+    @include atMedium {
+      border-width: 0 0 20px 20px;
+    }
   }
 }
